# wind_tunnel

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  get_params.f90  get_v_gpu.f90  getv.f90  getvort.f90  navier_stokes.f90  poisson.f90  poisson_cuda.f90  setup.f90  setup_gpu.f90  solver.f90  vars.f90  windtunnel.f90  writetofile.f90
src/: CMakeLists.txt  get_params.f90  get_v_gpu.f90  getv.f90  navier_stokes.f90  navier_stokes_gpu.f90  parallel.f90  poisson.f90  poisson_cuda.f90  setup.f90  solver.f90  tests.f90  timing.f90  vars.f90  windtunnel.f90  writetofile.f90
tests/: CMakeLists.txt  test_timing.f90
visualize/: visualize.ipynb
